--- a/front/main.css
+++ b/front/main.css
@@ -34,4 +34,34 @@ nav {
 
 .grid-item {
     vertical-align: center;
+    
+}
+
+li{
+     
+    list-style-type: none;
+    font-family: sans-serif;
+    font-size: 120%; 
+    display: block;
+    color: black;
+    padding: 1.2em;
+    text-decoration: none;
+    
+
+}
+
+ul {
+    
+    list-style-type: none;
+    padding: 10;
+    width: 200px;
+    padding: 25px;
+    background-color: white;
+    border: 3px double black;
+    border-radius: 40px;
+    position: fixed;
+    top: 10%;
+    left: 20%;
+        
+    
 }
