--- a/front/main.css
+++ b/front/main.css
@@ -34,26 +34,38 @@ nav {
 
 .grid-item {
     vertical-align: center;
+}
+
+/*///Hyperlink positioning*/
+.Hyplink{
+    
+    position: absolute;
+    bottom: 20px;
+    right: 16px;
+    font-size: 18px;
     
 }
 
-li{
+/*///Hovering over settings*/
+li a:hover{
      
     list-style-type: none;
     font-family: sans-serif;
-    font-size: 120%; 
+    font-size: 110%; 
     display: block;
     color: black;
-    padding: 1.2em;
+    padding: 1.5em;
     text-decoration: none;
     
 
 }
 
+/*//Hover border*/
+
 ul {
     
     list-style-type: none;
-    padding: 10;
+    padding: 20px;
     width: 200px;
     padding: 25px;
     background-color: white;
@@ -65,3 +77,7 @@ ul {
         
     
 }
+
+
+
+
