--- a/front/main.css
+++ b/front/main.css
@@ -1,3 +1,14 @@
+<!--
+/**
+* This is the main css file for our Application.
+*
+* @author  Matt Bishun, Jack Hickman
+* @version 1.0
+* @since   2018-03-10 
+*/
+-->
+
+
 body {
     background-color: #f44265;
 }
