--- a/front/main.css
+++ b/front/main.css
@@ -2,7 +2,7 @@
 /**
 * This is the main css file for our Application.
 *
-* @author  Matt Bishun, Jack Hickman
+* @author  Matt Bishun, Jack Hickman, up767436
 * @version 1.0
 * @since   2018-03-10 
 */
@@ -89,6 +89,65 @@ ul {
     
 }
 
+/* UP767436 Code to style the navigation bar  */
+/* Style the links inside the navigation bar */
+#navBar a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* UP767436 Change the color of links on hover, this is a useful technique when browsing on desktop as it allows the user to know that 
+their mouse is working and can carefully select the page they want.*/
+#navBar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* UP767436 Style the "active" element to highlight the current page. In this case, the current page will be highlighted in blue, showing
+the user will know which page they're on. */
+#navBar a.active {
+    background-color: #2196F3;
+    color: white;
+}
+
+/* UP767436 Style the search box inside the navigation bar. We want to keep this as simple as possible therefore the styling
+is mainnly for positioning and ledgibility purposes.*/
+#navBar input[type=text] {
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+}
+
+/* UP767436 When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally
+The purpose of this is to incoporate media queries to tailor the content to the device being used. Content will stretch or shrink
+in order to provide the user with the best possible viewing experience. It should be noted, the smaller the device, the harder it is 
+for content to be enjoyed.*/
+@media screen and (max-width: 600px) {
+    #navBar a, #navBar input[type=text] {
+        float: none;
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
+    }
+    #navBar input[type=text] {
+        border: 1px solid #ccc;
+    }
+}
+
+/* UP767436 Changes the text within the form to white to prevent color clashing. */
+form{
+    color: white;
+}
 
 
 
