--- a/front/main.css
+++ b/front/main.css
@@ -48,8 +48,8 @@ nav {
 }
 
 /*///Hyperlink positioning*/
-.Hyplink{
-    
+.Hyplink a{
+    color: white;
     position: absolute;
     bottom: 20px;
     right: 16px;
