--- a/front/main.css
+++ b/front/main.css
@@ -2,7 +2,7 @@
 /**
 * This is the main css file for our Application.
 *
-* @author  Matt Bishun, Jack Hickman, up767436
+* @author  UP812199, Jack Hickman, up767436
 * @version 1.0
 * @since   2018-03-10 
 */
