--- a/front/main.css
+++ b/front/main.css
@@ -47,7 +47,7 @@ nav {
     vertical-align: center;
 }
 
-/*///Hyperlink positioning*/
+/*///Hyperlink positioning*// UP812199
 .Hyplink a{
     color: white;
     position: absolute;
@@ -57,7 +57,7 @@ nav {
     
 }
 
-/*///Hovering over settings*/
+/*///Hovering over settings*// UP812199
 li a:hover{
      
     list-style-type: none;
@@ -71,7 +71,7 @@ li a:hover{
 
 }
 
-/*//Hover border*/
+/*//Hover border*///UP812199
 
 ul {
     
